@@ -1,3 +1,6 @@
+- Applied Eric Hauser's patch fixing CORE-ISSUE-22
+  "Support for environment variables in resource URI"
+
 - Applied Gauthier Segay's patch fixing CORE-ISSUE-20
   "Castle.Core.Tests won't build via nant because it use TraceContext without referencing System.Web.dll"
 
